Removed archived code. Fixed compiler warning.